合并'碧蓝航线'和'明日方舟'两个游戏的自动化脚本，同时'明日方舟'实现了基于adb的android和基于wda的ios平台python脚本

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+### project files ###
+test/
+temp/
+arknights_android/
 screen.png
 origin
 
-# jetbrain pycharm
+### python ### 
+__pycache__/
+
+### jetbrain pycharm ###
 .idea/
 *.iml
 
-# macOS
+### macOS ###
 .DS_Store
