补充README,并将配置文件改为默认配置文件,移除重复的common公共文件

--- a/arknights/default-config.ini
+++ b/arknights/default-config.ini
@@ -7,6 +7,6 @@ use_stone=False
 use_stone_max=0
 
 # 自动使用药剂换取理智
-use_pharmacy=True
+use_pharmacy=False
 # 自动使用药剂最大数量
-use_pharmacy_max=2
+use_pharmacy_max=0
