碧蓝自律增加地图移动功能;修改配置文件和命令行参数支持

--- a/default-config.ini
+++ b/default-config.ini
@@ -1,26 +1,15 @@
 [global]
-
 log_level=info
 game_name=arknights
+# 副本复读次数，-1为不限次数直至木得理智
+repeat_count_max=-1
 
 [arknights]
-
-# 副本复读次数，-1为不限次数直至木得理智
-max_repeat_count=-1
-
-# 自动使用石头换取理智
-intellect_use_stone=False
-
 # 自动使用石头最大数量
-intellect_use_stone_max=0
-
-# 自动使用药剂换取理智
-intellect_use_pharmacy=False
-
+use_stone_max=0
 # 自动使用药剂最大数量
-intellect_use_pharmacy_max=0
+use_pharmacy_max=0
 
 [azurelane]
-
 # 刷的关卡，3_1 = 第三章第一关
 battle_no=3_1
