合并start.py;增加8-4入口;调整目录结构和文件位置、变量命名

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 ### project files ###
-test/
-arknights/temp
-azurelane/temp
-temp/*.png
-origin
-config.ini
+temp/
 logs/
+conf/config.ini
 
 ### python ### 
 __pycache__/
