add some non-test feature.

--- a/conf/default-config.ini
+++ b/conf/default-config.ini
@@ -1,20 +1,23 @@
 [global]
-# 设备类型，枚举，ios/android
 device_type=ios
-# 设备屏幕dpi值，苹果通常为2或者3，安卓默认为1
 device_dpi=2
 game_name=arknights
-# 副本复读次数，-1为不限次数直至木得理智
 repeat_count_max=-1
+screenshot_to_disk=False
+
+# serverchan key
+server_chan_enable=False
+server_chan_secret=
 
 [arknights]
-# 自动使用石头最大数量
 use_stone_max=0
-# 自动使用药剂最大数量
 use_pharmacy_max=0
 
 [azurelane]
-# 刷的关卡，3_1 = 第三章第一关
 battle_no=3_1
-# 移动地图进行索敌时的首次移动方向，0=向上滑动，1=向右滑动，2=向下滑动，3=向左滑动
 default_swipe_direction=0
+team_switch=False
+team_switch_threshold=4
+
+[girlsfrontline]
+max_like_dormitory=50
