1.出击界面增加高危海域与危险海域识别 2.更新海域探索未知点的识别图标 3.更新项目依赖的版本 4.增加碧蓝关卡7-2/8-3/特别行动-埃塞克斯/活动-月色下的归途/活动-永夜幻光入口识别数据

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### project files ###
-temp/
+temp/*.*
 logs/
 conf/config.ini
 
@@ -10,6 +10,7 @@ __pycache__/
 ### jetbrain pycharm ###
 .idea/
 *.iml
+venv/
 
 ### macOS ###
 .DS_Store
