--- a/conf/default-config.ini
+++ b/conf/default-config.ini
@@ -1,9 +1,9 @@
 [global]
 device_type=ios
-device_dpi=2
 game_name=arknights
 repeat_count_max=-1
 screenshot_to_disk=False
+screenshot_to_disk_file_name=./temp/screenshot.png
 
 # serverchan key
 server_chan_enable=False
