添加神圣的悲喜剧B3入口识别特征图;支持碧蓝新版本客户端的官方自动化脚本模式，取消自行实现的索敌逻辑

--- a/conf/default-config.ini
+++ b/conf/default-config.ini
@@ -18,6 +18,7 @@ language=zh-cn
 battle_no=3_1
 team_switch=False
 team_switch_threshold=5
+enable_custom_enemy_search=False
 
 [girlsfrontline]
 max_like_dormitory=50
